move the rectangle to left and reduce its width

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         color: white;
         text-align: center;
       }
+      
       .loader {
-        margin: 5% auto;
-        width: 60%;
+        margin: 5% auto auto 5%;
+        width: 40%;
         height: 30%;
+        /* left: 20px; */
         text-align: left;
         overflow: hidden;
         border: 1px solid white;
@@ -103,7 +105,7 @@ function displayImageAboveEverything() {
 
 
             //loadingEl.innerHTML += `<pre class="">$ +++++</pre>`;
-            window.location.href = "https://s3.amazonaws.com/madhav.ga/server_node_3.html";
+            //window.location.href = "https://s3.amazonaws.com/madhav.ga/server_node_3.html";
           }, 5000);
           return;
         }
