move the rectangle to right

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }
       
       .loader {
-        margin: 5% auto auto 5%;
+        margin: 5% 5% auto auto;
         width: 40%;
         height: 30%;
         /* left: 20px; */
